feat: add html markup and style css section header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>MY | CV</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <h1>Nikita Khveshchenko</h1>
+    <div class="container">
+      <header class="header">
+        <nav class="header__menu menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#about">About</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#experience">Experience</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#contacts">Contacts</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#skills">Skills</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#education">Education</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#language">Language</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#code">Code</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
   </body>
 </html>
