feat: add html markup and style css section about

--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
           </ul>
         </nav>
       </header>
+      <main class="content">
+        <section class="about" id="about">
+          <div class="about__img-wrapper">
+            <img
+              class="about__img"
+              src="./assets/images/avatar.jpg"
+              alt="My avatar"
+              width="200"
+              height="200"
+              loading="lazy">
+          </div>
+
+          <div class="about__content">
+            <h1 class="about__title">Nikita Khveshchenko</h1>
+            <div class="about__description">
+              <p>
+                I am a passionate and self-motivated beginner developer with a
+                strong interest in front-end development. Although I don’t have
+                commercial experience yet, I have been actively learning HTML,
+                CSS, and JavaScript on my own, building small projects to
+                improve my skills. My goal is to start a career in web
+                development, grow as a professional, and contribute to
+                meaningful projects.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
