feat: add html markup and style css section experience

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="about__content">
-            <h1 class="about__title">Nikita Khveshchenko</h1>
+            <h1 class="about__title puddle-bg">Nikita Khveshchenko</h1>
             <div class="about__description">
               <p>
                 I am a passionate and self-motivated beginner developer with a
@@ -61,6 +61,38 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="experience" id="experience">
+          <h2 class="experience__title puddle-bg">Experience</h2>
+          <ul class="experience__list">
+            <li class="experience__item">
+              <div class="experience__card card">
+                <h3 class="card__title">
+                  Educational projects | Kropp Landing
+                </h3>
+                <div class="card__description">
+                  <p>
+                    At the moment I have no commercial experience, but I am
+                    actively developing through educational projects
+                  </p>
+                </div>
+                <div class="card__buttons-wrapper">
+                  <a
+                    class="card__button button"
+                    href="https://github.com/XianNekko/kropp"
+                    target="_blank">
+                    Code
+                  </a>
+                  <a
+                    class="card__button button"
+                    href="https://xiannekko.github.io/kropp/"
+                    target="_blank">
+                    Demo
+                  </a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
