--- a/index.html
+++ b/index.html
@@ -186,6 +186,56 @@
             </li>
           </ul>
         </section>
+        <section class="skills" id="skills">
+          <h2 class="skills__title puddle-bg">Skills</h2>
+          <div class="skills__wrapper">
+            <ul class="skills__list">
+              <li class="skills__item">
+                <h3 class="skills__item-title">Front-end</h3>
+              </li>
+              <li class="skills__item">
+                <div class="skills__progress-bar-container">
+                  <div class="skills__progress-bar"></div>
+                </div>
+                <p class="skills__text">HTML5</p>
+              </li>
+              <li class="skills__item">
+                <div class="skills__progress-bar-container">
+                  <div class="skills__progress-bar"></div>
+                </div>
+                <p class="skills__text">CSS3</p>
+              </li>
+              <li class="skills__item">
+                <div class="skills__progress-bar-container">
+                  <div class="skills__progress-bar"></div>
+                </div>
+                <p class="skills__text">JavaScript</p>
+              </li>
+            </ul>
+            <ul class="skills__list">
+              <li class="skills__item">
+                <h3 class="skills__item-title">Version Control</h3>
+              </li>
+              <li class="skills__item">
+                <p class="skills__text">Git</p>
+              </li>
+              <li class="skills__item">
+                <p class="skills__text">GitHub</p>
+              </li>
+            </ul>
+            <ul class="skills__list">
+              <li class="skills__item">
+                <h3 class="skills__item-title">Tools</h3>
+              </li>
+              <li class="skills__item">
+                <p class="skills__text">VS Code</p>
+              </li>
+              <li class="skills__item">
+                <p class="skills__text">Figma</p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
     </div>
   </body>
