feat: add html markup and style css section language

--- a/index.html
+++ b/index.html
@@ -265,6 +265,21 @@
             </li>
           </ul>
         </section>
+        <section class="language" id="language">
+          <h2 class="language__title puddle-bg">Language</h2>
+          <ul class="language__list">
+            <li class="language__item">
+              <p class="language__text">
+                <b>Russian</b> - native
+              </p>
+            </li>
+            <li class="language__item">
+              <p class="language__text">
+                <b>English</b> - A0 (Beginner, actively learning)
+              </p>
+            </li>
+          </ul>
+        </section>
       </main>
     </div>
   </body>
