feat: add html markup and style css section code

--- a/index.html
+++ b/index.html
@@ -280,6 +280,18 @@
             </li>
           </ul>
         </section>
+        <section class="code" id="code">
+          <h2 class="code__title puddle-bg">Code</h2>
+          <pre>
+            <code>
+              <p class="code__text">
+<span class="code__text--function">function</span> <span class="code__text--function-name">evenOrOdd</span>(<span class="code__text--function-arg">number</span>) {
+  <span class="code__text--function-return">return</span> number % 2 ? "Odd" : "Even";
+}  
+              </p>            
+            </code>
+          </pre>
+        </section>
       </main>
     </div>
   </body>
